--- a/scss/signup.css
+++ b/scss/signup.css
@@ -1,6 +1,10 @@
 .background_img {
   background-image: url(/images/image\ 1.png);
   padding: 3.65rem 0;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 100vh;
 }
 .background_img .signin_block {
   background-color: rgba(244, 215, 237, 0.8509803922);
@@ -26,7 +30,7 @@
   margin: 1.5rem auto auto;
   background: rgba(194, 134, 134, 0.38);
   color: #ffffff;
-  padding: 0.8rem 2rem;
+  padding: 0.3rem 2rem;
   box-shadow: 0px 5px #AC7F7F;
   border-radius: 2rem;
   font-size: 1.563rem;
@@ -43,5 +47,10 @@
   margin-top: 1.5rem;
 }
 .background_img .signin_block .right_block .signup_btn {
-  padding: 2rem 0;
+  padding: 1.5rem 0;
+}
+.background_img .signin_block .right_block .signin_link a {
+  color: #AC7F7F;
+  font-size: 1.5rem;
+  font-weight: 700;
 }/*# sourceMappingURL=signup.css.map */
