--- a/scss/signup.css
+++ b/scss/signup.css
@@ -1,5 +1,5 @@
 .background_img {
-  background-image: url(/images/image\ 1.png);
+  background-image: url(../images/image\ 1.png);
   padding: 3.65rem 0;
   background-size: cover;
   background-position: center;
