--- a/scss/style.css
+++ b/scss/style.css
@@ -22,7 +22,7 @@ button {
 }
 
 .background_img {
-  background-image: url(/images/image\ 1.png);
+  background-image: url(../images/image\ 1.png);
   padding: 5rem 0;
   background-size: cover;
   background-position: center;
@@ -94,7 +94,7 @@ button {
   }
 }
 .background_img {
-  background-image: url(/images/image\ 1.png);
+  background-image: url(../images/image\ 1.png);
   padding: 3.65rem 0;
   background-size: cover;
   background-position: center;
