--- a/scss/style.scss
+++ b/scss/style.scss
@@ -23,7 +23,7 @@ button{
 
 
 .background_img{
-    background-image: url(/images/image\ 1.png);
+    background-image: url(../images/image\ 1.png);
     padding: 5rem 0;
     background-size: cover;
     background-position: center;
