--- a/scss/signup.scss
+++ b/scss/signup.scss
@@ -65,3 +65,12 @@
         }
     }
 }
+
+
+.admin{
+    text-align: center;
+    padding: 4rem 0;
+    .admin_btn{
+        padding-top: 2rem;
+    }
+}
