--- a/scss/home.scss
+++ b/scss/home.scss
@@ -1,6 +1,5 @@
 
-.cards_bg{
-    background-color: #F4D7EDD9;
+
 .navbar{
     background-color: #AC7F7F;
     padding: 1rem 2rem;
@@ -23,9 +22,14 @@
 
 .cards_block{
    padding: 3rem 0;
+   .card_container{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 1.5rem;
    .card1{
     display: flex;
-    gap: 2rem;
+    gap: 1rem;
     background-color: #AC7F7F;
     border-radius: 1.375rem;
     padding: 0;
@@ -42,7 +46,7 @@
         }
     }
     .choco_deatils{
-        padding-top: 1rem;
+        padding: 1rem 1rem 0 0;
         color: #ffffff;
         h2{
            font-size: 1.875rem;
@@ -87,17 +91,21 @@
     }
     }
 }
+}
 .add_item{
-    text-align: right;
-    .add_choco{
-       width: 3rem;
-      margin: auto  3rem auto;
+    position: relative;
+    cursor: pointer;
+    .add_chocos{
+        position: absolute;
+        top: 2rem;
+        right: 0;
+        width: 3.5rem;
+        color: #ffffff;
         background-color: #AC7F7F;
-        border-radius: 6rem;
+        border-radius: 8rem;
         font-size: 3rem;
         font-weight: bold;
         text-align: center;
      }
 }
 
-}
