--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,8 +5,11 @@
     box-sizing: border-box;
     text-decoration: none;
     font-family: 'Philosopher', sans-serif;
+    
 }
-
+body{
+    background-color: #F4D7EDD9;
+}
 button{
     color: #ffffff;
     padding: 0.5rem 3.5rem;
@@ -20,7 +23,32 @@ button{
     background: #AC7F7F;
     box-shadow: 0px 7px  #DCA7A7;
 }
-
+h2{
+    font-size: 3.75rem;
+    color: #AC7F7F;
+}
+ input{
+                display: block;
+                width: 25rem;
+                margin: 1.5rem auto auto;
+                background: rgba(194, 134, 134, 0.38);
+                color: #ffffff;
+                padding: 0.3rem 2rem;
+                box-shadow: 0px 5px  #AC7F7F;
+                border-radius: 2rem;
+                font-size: 1.563rem;
+                border: none; 
+                font-family: 'Poppins', sans-serif;
+                &::placeholder{
+                    color: #ffffff;
+                   
+                    // font-size: 1.563rem;
+                }
+                &:focus{
+                    outline: none;
+                }
+               
+            }
 
 .background_img{
     background-image: url(../images/image\ 1.png);
@@ -121,6 +149,8 @@ button{
 
 @import "./signup.scss";
 @import "./home.scss";
+@import "./add_choco.scss";
+@import "./show_choco.scss";
 
 
 
