--- a/scss/show_choco.scss
+++ b/scss/show_choco.scss
@@ -25,3 +25,11 @@
         }
     }
 }
+
+@media screen and (max-width: 576px){
+    .show_choco {
+        .show_img{
+            width: 100%;
+        }
+    }
+}
