--- a/scss/signup.scss
+++ b/scss/signup.scss
@@ -1,10 +1,10 @@
 .background_img{
     background-image: url(../images/image\ 1.png);
     padding: 3.65rem 0;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    height: 100vh;
+    // background-size: cover;
+    // background-position: center;
+    // background-repeat: no-repeat;
+    // height: 100vh;
     .signin_block{
         background-color: #F4D7EDD9;
         padding: 0rem 0.7rem;
@@ -74,3 +74,30 @@
         padding-top: 2rem;
     }
 }
+
+@media screen and (max-width: 576px){
+    .background_img {
+        .signin_block {
+            margin: 0 2rem;
+            .left_block{
+               
+                width: 100%;
+                img{
+                    width: 100%;
+                }
+            }
+            .right_block {
+                .signin_form {
+                    input{
+                        width: 100%;
+                    }
+                }
+            }
+        }
+
+        
+}
+        
+    }
+
+    
