--- a/scss/add_choco.scss
+++ b/scss/add_choco.scss
@@ -65,3 +65,16 @@
         }
     }
 }
+
+
+// .add_choco .add_left .edit_choco_img
+
+@media screen and (max-width: 576px){
+    .add_choco{
+        .add_left{
+            .add_choco_img{
+                width: 100%;
+            }
+        }
+    } 
+}
