--- a/scss/home.css
+++ b/scss/home.css
@@ -15,6 +15,7 @@
 }
 .navbar .logout {
   padding-top: 0.3rem;
+  cursor: pointer;
 }
 
 .cards_block {
@@ -37,6 +38,7 @@
   background-color: #FCC5C5;
   padding: 1.2rem 0.5rem;
   border-radius: 1.375rem;
+  cursor: pointer;
 }
 .cards_block .card_container .card1 .choco_img .image {
   width: 7.5rem;
