--- a/scss/home.scss
+++ b/scss/home.scss
@@ -17,6 +17,7 @@
     }
     .logout{
         padding-top: 0.3rem;
+        cursor: pointer;
     }
 }
 
@@ -38,6 +39,7 @@
         background-color: #FCC5C5;
         padding: 1.2rem 0.5rem;
         border-radius: 1.375rem;
+        cursor: pointer;
         .image{
             width: 7.5rem;
             img{
