--- a/scss/style.css
+++ b/scss/style.css
@@ -106,6 +106,9 @@ input:focus {
   button {
     font-size: 1.125rem;
   }
+  input, img, textarea {
+    width: 100% !important;
+  }
   .background_img {
     padding: 5rem 3rem;
   }
@@ -125,10 +128,6 @@ input:focus {
 .background_img {
   background-image: url(../images/image\ 1.png);
   padding: 3.65rem 0;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  height: 100vh;
 }
 .background_img .signin_block {
   background-color: rgba(244, 215, 237, 0.8509803922);
@@ -187,6 +186,20 @@ input:focus {
   padding-top: 2rem;
 }
 
+@media screen and (max-width: 576px) {
+  .background_img .signin_block {
+    margin: 0 2rem;
+  }
+  .background_img .signin_block .left_block {
+    width: 100%;
+  }
+  .background_img .signin_block .left_block img {
+    width: 100%;
+  }
+  .background_img .signin_block .right_block .signin_form input {
+    width: 100%;
+  }
+}
 .navbar {
   background-color: #AC7F7F;
   padding: 1rem 2rem;
@@ -204,6 +217,7 @@ input:focus {
 }
 .navbar .logout {
   padding-top: 0.3rem;
+  cursor: pointer;
 }
 
 .cards_block {
@@ -226,6 +240,7 @@ input:focus {
   background-color: #FCC5C5;
   padding: 1.2rem 0.5rem;
   border-radius: 1.375rem;
+  cursor: pointer;
 }
 .cards_block .card_container .card1 .choco_img .image {
   width: 7.5rem;
@@ -356,6 +371,11 @@ input:focus {
   padding: 0.2rem 3.5rem;
 }
 
+@media screen and (max-width: 576px) {
+  .add_choco .add_left .add_choco_img {
+    width: 100%;
+  }
+}
 .show_choco {
   text-align: center;
   padding: 2rem 0;
@@ -378,4 +398,10 @@ input:focus {
 .show_choco .details p {
   font-size: 1.875rem;
   color: #AC7F7F;
+}
+
+@media screen and (max-width: 576px) {
+  .show_choco .show_img {
+    width: 100%;
+  }
 }/*# sourceMappingURL=style.css.map */
