--- a/scss/home.scss
+++ b/scss/home.scss
@@ -13,11 +13,15 @@
             color: #ffffff;
             font-family: 'Philosopher', sans-serif;
             padding: 0rem 1rem;
+            cursor: pointer;
         }
     }
     .logout{
         padding-top: 0.3rem;
         cursor: pointer;
+    }
+    .mobile_nav_bar{
+        display: none;
     }
 }
 
@@ -111,3 +115,120 @@
      }
 }
 
+
+@media screen and (max-width: 576px){
+    .navbar {
+        .menu{
+            display: none;
+        }
+        .logout{
+            display: none;
+        }
+        .mobile_nav_bar{
+        //    display: none;
+            .hamburg{
+                width: 100%;
+                padding: 1rem 0;
+                position: relative;
+                z-index: 999;
+            span{
+                display: block;
+                height: 0.3rem;
+                width: 2.2rem;
+                background-color: #ffffff;
+                padding: 0rem 1rem;
+                margin: 0.4rem;
+            }
+        }
+        .mobile{
+            display: none;
+        .mobile_menu{
+            display: flex;
+                flex-direction: column;
+                align-items: center;
+                width: 100%;
+                gap: 1rem;
+                padding: 5rem 0;
+                margin-top: 6rem;
+                position: absolute;
+                top: 0rem;
+                left: 0;
+                z-index: 99;
+                background-color: #AC7F7F;
+                a{
+                    font-size: 2.25rem;
+                    color: #ffffff;
+                    font-family: 'Philosopher', sans-serif;
+                    padding: 0rem 1rem;
+                    cursor: pointer;
+                }
+                    .mobile_logout{
+                        width: 30%;
+                        img{
+                            width: 100%;
+                        }
+                    }
+                
+        }
+    }
+    }
+}
+}
+
+@media (max-width: 786px){
+    .navbar {
+        .menu{
+            display: none;
+        }
+        .logout{
+            display: none;
+        }
+        .mobile_nav_bar{
+            .hamburg{
+                width: 100%;
+                padding: 1rem 0;
+                position: relative;
+                z-index: 999;
+            span{
+                display: block;
+                height: 0.3rem;
+                width: 2.2rem;
+                background-color: #ffffff;
+                padding: 0rem 1rem;
+                margin: 0.4rem;
+            }
+        }
+        .mobile{
+            display: none;
+        .mobile_menu{
+            display: flex;
+                flex-direction: column;
+                align-items: center;
+                width: 100%;
+                gap: 1rem;
+                padding: 5rem 0;
+                margin-top: 6rem;
+                position: absolute;
+                top: 0rem;
+                left: 0;
+                z-index: 99;
+                background-color: #AC7F7F;
+                a{
+                    font-size: 2.25rem;
+                    color: #ffffff;
+                    font-family: 'Philosopher', sans-serif;
+                    padding: 0rem 1rem;
+                    cursor: pointer;
+                }
+                    .mobile_logout{
+                        width: 30%;
+                        img{
+                            width: 100%;
+                        }
+                    }
+                
+        }
+    }
+    }
+}
+}
